fix z-index issues

--- a/app/components/landing/landing.css
+++ b/app/components/landing/landing.css
@@ -90,7 +90,7 @@
     position: absolute;
     top: 0;
     background-color: rgba(255, 255, 255, 0.4);
-    z-index: 100;
+    z-index: 2;
     text-align: center;
     overflow-y: hidden;
 }
