--- a/app/css/main.css
+++ b/app/css/main.css
@@ -36,7 +36,7 @@ md-toolbar:not(.md-menu-toolbar) {
     background-color: rgba(255, 255, 255, 0.95);
     border-bottom: 1px rgb(211, 211, 211) solid;
     color: #000000;
-    z-index: 2;
+    z-index: 3;
     padding-left: 1rem;
     padding-right: 1rem;
 }
